src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: functions-test
  name: functions-test
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: functions-test
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/safestay: "true"
        io.kompose.network/safestay_rabbit_net: "true"
        io.kompose.service: functions-test
    spec:
      containers:
        - image: khinar/functions:latest
          name: rasa-flask-middleware
          ports:
            - containerPort: 8080
         
      
status: {}
