src/knative_test.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: knative-test
  namespace: durian
spec:
  template:  
    spec:      
      containerConcurrency: 200  
      containers:
      - image: docker.io/khinar/knative-test
        env:
        - name: namespace
          value: "durian"
