src/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: functions-test
  name: functions-test
spec:
  ports:
    - name: "http"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: functions-test
status:
  loadBalancer: {}
