src/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: functions-test
spec:
  hosts:
    - "functions-test.epsilon.konverse.ai"
  gateways:
    - functions-test-gateway
  http:
    - match:
        - uri:
            prefix: /        
      route:
        - destination:
            port:
              number: 8000
            host: functions-test.default.svc.cluster.local
